# LoQS

./: .gitignore  .gitlab-ci.off.yml  .gitlab-ci.yml  .ignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CLAUDE.md  NOTICE  README.md  coverage.json  mkdocs-api-ref.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: loqs.yml  reusable-loqs.yml
.ralph/: ralph-context.md  ralph-tasks.md
doc/: conf.py  index.rst
docs/: DOCS_README  _config.yml  _toc.yml  api.rst  ch1records.md  ch1runningit.md  ch1sec0quantumprogram.md  ch1sec1instructions.md  ch1sec2records.md  ch1sec3stack.md  ch1sec4runningit.md  ch2backends.md  ch2models.md  ch2states.md  ch5qeccodes.md  ch5surfacecode-notebook.md  ch6codepacks.md  conf.py  def_template.out  index.md  intro.md  new_template.out  references.bib  requirements.txt  serve.py
docs/_templates/: custom-class-template.rst
docs/ch1overview/: 1_intro.md  2_quantumprogram.md  3_trajectory.ipynb  3_trajectory.md
docs/ch2backends/: 2_circuits.md
docs/ch3core/: 1_coreobjects.md  2_recordables.md  3_instructions.md
docs/ch4codes/: 2_codepacks.md  3_surfacecode.ipynb  3_surfacecode.md  test.ipynb  test.md
docs/coreobjs/: backends.md  history.md  instructions.md  qeccodes.md
docs/coreobjs/instructions/: builders.md  labelsandstacks.md
docs/dev-zone/: devguide.md
docs/devguide/: api.rst  devguide.md
docs/examples/: fttests.md  fttests.md.off  runlogst.md.off  timedepmodel.md.off  todo.md
docs/getting-started/: install.md  overview.md  workflow.md
docs/gettingstarted/: install.md  overview.md  workflow.md
docs/markdown/: backends.md  builders.md  buildinstruction.md  buildqeccode.md  codepacks.md  codes.md  daskparallelism.md  devguide.md  frame.md  fttests.md  history.md  install.md  instructions.md  overview.md  program.md  recordables.md  runlogst.md  stack.md  timedepmodel.md  workflow.md
docs/object-quickstart/: backends.md.off  builders.md.off  codepacks.md.off  codes.md.off  frame.md.off  history.md.off  instructions.md.off  program.md  recordables.md  stack.md
docs/objguide/: backends.md  builders.md  codepacks.md  codes.md  frame.md  history.md  instructions.md  program.md  recordables.md  stack.md
docs/overrides/partials/: header.html
docs/tutorials/: buildcodepack.md  buildinstruction.md  buildinstruction.md.off  buildqeccode.md  daskparallelism.md  runlogst.md  serialization.md
docs_scripts/: api_hooks.py  api_inventory.py  gen_ref_pages.py  hooks.py  main_hooks.py
examples/: SurfaceCode.ipynb
loqs/: __init__.py  types.py
loqs/backends/: __init__.py  backend.py  circuitbackend.py  physicalcircuit.py  reps.py  statebackend.py
loqs/backends/circuit/: __init__.py  basebackend.py  basecircuit.py  builtincircuit.py  circuitbackend.py  listcircuit.py  pygsti.py  pygstibackend.py  pygsticircuit.py  pygsticircuitbackend.py  stimcircuit.py
loqs/backends/model/: __init__.py  base.py  basemodel.py  deimodel.py  dictmodel.py  modelbackend.py  pygsti.py  pygstimodel.py  pygstimodelbackend.py  stimdictmodel.py
loqs/backends/pygsti/: __init__.py  circuitbackend.py
loqs/backends/state/: __init__.py  basestate.py  npsvstate.py  qsim.py  qsimstate.py  stimstate.py
loqs/codepacks/: __init__.py  code_5_1_3_quantinuum2022.py  codepack_5_1_3_quantinuum2022.py  codepack_7_1_3_quantinuum2021.py  codepack_trivial_counter.py  d3_5q_code.py  d3_surface_code.py
loqs/core/: __init__.py  codepatch.py  frame.py  history.py  instruction.py  operation.py  physicalcircuit.py  programresults.py  qeccode.py  qeccodespec.py  quantumprogram.py  record.py  recordable.py  syndrome.py  syndromecircuit.py  syndromelabel.py  templatedcircuit.py  trajectory.py
loqs/core/instructions/: __init__.py  builders.py  common.py  compositeinstruction.py  decoder.py  feedforwardupdate.py  inputspec.py  instruction.py  instructionlabel.py  instructionstack.py  logicaloperation.py  mockoperation.py  objbuilder.py  patchoperations.py  permutepatch.py  syndromeextraction.py
loqs/core/recordables/: __init__.py  measurementoutcomes.py  mockstate.py  patchdict.py  pauliframe.py  qeccodepatch.py  quantumstate.py  stabilizerframe.py  syndrome.py
loqs/extensions/: __init__.py  pygstitools.py
loqs/internal/: __init__.py  castable.py  displayable.py  jsonencoding.py  recordable.py  serializable.py  serializableviewer.py
loqs/internal/encoder/: __init__.py  baseencoder.py  hdf5encoder.py  jsonencoder.py
loqs/operations/: __init__.py  operation.py  operationstack.py  physicalcircuits.py
loqs/operations/common/: __init__.py
loqs/records/: __init__.py  record.py  recordhistory.py
loqs/records/common/: __init__.py
loqs/tools/: __init__.py  dasktools.py  fttools.py  pygstitools.py  qectools.py  qsimtools.py  reptools.py
loqs/utils/: __init__.py  castable.py  classproperty.py  recordable.py  roclassproperty.py  sigtools.py
test/utils/: test_sigtools.py
tests/: conftest.py  test.ipynb
tests/backends/: test.ipynb  test_listcircuit.py  test_noise_integrated.py  test_npsvstate.py  test_pygsticircuit.py  test_qsimstate.py  test_stimcircuit.py  test_stimstate.py
tests/backends/model/: test_stimdictmodel.py
tests/codepacks/: test.ipynb  test_codepack_5_1_3_quantinuum.py  test_codepack_7_1_3_quantinuum.py  test_codepack_trivial_counter.py
tests/core/: test_frame.py  test_history.py  test_instruction.py  test_programresults.py  test_qeccode.py  test_quantumprogram.py  test_syndrome.py  test_syndromelabel.py
tests/core/instructions/: test_instruction.py  test_instructionlabel.py  test_instructionstack.py
tests/core/recordables/: test_measurementoutcomes.py  test_patchdict.py  test_pauliframe.py
tests/internal/: test_classproperty.py  test_encoders.py  test_jsonencoding.py  test_serializable.py  test_version_compatibility.py
tests/performance/: test_history_performance.py  test_serialization_performance.py  test_space_savings.py
tests/tools/: test_pygstitools.py  test_qectools.py  test_qsimtools.py  test_reptools.py
tests/utils/: test_roclassproperty.py
(+4 files in other folders)
