[project]
name = "loqs"
version = "1.0-alpha"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "tqdm>=4"
]
authors = [
    {name = "Kenneth Rudinger", email = "kmrudin@sandia.gov"},
    {name = "Stefan Seritan", email = "sserita@sandia.gov"},
    {name = "Megan Dahlhauser"},
    {name = "Julie Campos"},
    {name = "Mario Morford-Oberst"},
]
maintainers = [
    {name = "Kenneth Rudinger", email = "kmrudin@sandia.gov"},
    {name = "Stefan Seritan", email = "sserita@sandia.gov"}
]
description = "Logical Qubit Simulator (LoQS)"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black>=24",
    "flake8>=7",
    "mypy>=1"
]
docs = [
    "sphinx",
    "jupyter-book",
    "jupytext"
]
quantumsim = ["quantumsim==0.2.0"]
pygsti = ["pygsti[extensions]>=0.9.12"]
test = [
    "loqs[dev]",
    "mock>=5",
    "pytest>=8",
    "pytest-cov>=5",
    "tox>=4"
]
backends = ["loqs[quantumsim,pygsti]"]
nobackends = ["loqs[dev,docs,test]"]
all = ["loqs[backends,nobackends]"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79 # Match PEP8
include = '\.pyi?$'
force-exclude = '''
/(
      \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | docs
    | tests
    | venv
)/
'''

[tool.pyright]
exclude = [
    "**/pycache",
    "**/venv"
]

[tool.jupytext]
formats = "md:myst,ipynb"