[project]
name = "loqs"
version = "1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "tk",
    "tqdm>=4",
    "h5py"
]
authors = [
    {name = "Stefan Seritan", email = "sserita@sandia.gov"},
    {name = "Kenneth Rudinger", email = "kmrudin@sandia.gov"},
    {name = "Antonio Russo", email = "arusso@sandia.gov"},
    {name = "Riley Murray", email = "rjmurr@sandia.gov"},
    {name = "Daniel Hothem", email = "dhothem@sandia.gov"},
    {name = "Megan Dahlhauser"},
    {name = "Julie Campos"},
    {name = "Mario Morford-Oberst"},
]
maintainers = [
    {name = "Kenneth Rudinger", email = "kmrudin@sandia.gov"},
    {name = "Stefan Seritan", email = "sserita@sandia.gov"}
]
description = "Logical Qubit Simulator (LoQS)"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed"
]

[project.optional-dependencies]
dask = [
    "bokeh!=3.0.*,>=2.4.2",
    "dask[distributed]",
    "ipywidgets"
]
dev = [
    "pre-commit",
    "black==24.1.0",
    "flake8>=7",
    "mypy>=1",
    "snakeviz"
]
docs = [
    "griffelib==2.0.2",
    "mkdocs==1.6.1",
    "mkdocs-autorefs~=1.4.4",
    "mkdocs-bibtex==4.4.0",
    "mkdocs-gen-files~=0.6.1",
    "mkdocs-literate-nav~=0.6.3",
    "mkdocs-marimo==0.2.1",
    "mkdocs-material==9.7.6",
    "mkdocs-simple-hooks~=0.1.5",
    "mkdocstrings==1.0.3",
    "mkdocstrings-python==2.0.3",
    "pymdown-extensions~=10.21.2",
    "pypandoc==1.17",
    "pypandoc-binary==1.17",
]
quantumsim = ["quantumsim==0.2.0"]
pygsti = ["pygsti>=0.9.12"]
stim = [
    "stim>=1",
    "pymatching>=2"
]
test = [
    "loqs[dev]",
    "mock>=5",
    "pytest>=8",
    "pytest-cov>=5",
    "tox>=4"
]
visualization = [
    "pdf2image",
    "pillow",
    "qiskit[visualization]",
]
backends = ["loqs[quantumsim,pygsti,stim]"]
nobackends = ["loqs[dask,dev,docs,test,visualization]"]
all = ["loqs[backends,nobackends]"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude=["docs*", "tests*"]

[tool.black]
line-length = 79 # Match PEP8
include = '\.pyi?$'
required-version = "24.1.0"
force-exclude = '''
/(
      \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | docs
    | tests
    | venv
)/
'''

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/pycache",
    "**/__pycache__",
    "**/.*",
    "**/venv"
]

[tool.marimo.runtime]
on_cell_change = "lazy"
auto_reload = "lazy"